--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12446,6 +12446,15 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.no-scroll {
+  overflow: hidden;
+}
+
+body {
+  padding-bottom: 100px;
+  scroll-behavior: auto;
+}
+
 .rek-100vw {
   width: 100vw;
 }
@@ -12816,13 +12825,13 @@ textarea.form-control-lg {
 
 .rek-section-title {
   position: absolute;
-  top: 10%;
+  top: 3%;
 }
 @media screen and (min-width: 992px) {
   .rek-section-title {
     left: 0;
     opacity: 0;
-    top: 0%;
+    top: 4%;
   }
 }
 .rek-section-title::after {
@@ -13015,4 +13024,45 @@ rect {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 10px;
+}
+
+.wave {
+  animation-name: wave-animation;
+  /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s;
+  /* Change to speed up or slow down */
+  animation-iteration-count: infinite;
+  /* Never stop waving :) */
+  transform-origin: 70% 70%;
+  /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  /* Reset for the last half to pause */
+  100% {
+    transform: rotate(0deg);
+  }
 }
